# mim

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: technical.md  user-guide.md
mim-core/: Cargo.toml
mim-core/src/: config.rs  crypto.rs  error.rs  geocode.rs  lib.rs  sync.rs  watcher.rs
mim-core/src/db/: albums.rs  dedupe.rs  events.rs  face_identities.rs  faces.rs  folders.rs  mod.rs  photos.rs  schema.rs  search.rs  tags.rs
mim-core/src/models/: album.rs  face.rs  folder.rs  mod.rs  photo.rs  tag.rs
mim-core/src/scanner/: metadata.rs  mod.rs
mim-core/src/thumbnail/: mod.rs
mim-ml/: Cargo.toml
mim-ml/src/: analysis.rs  clustering.rs  detection.rs  error.rs  gemma.rs  lib.rs  models.rs  ocr.rs  pipeline.rs  preprocessing.rs  recognition.rs  upscale.rs
mim-tauri/: Cargo.toml  package-lock.json  tauri.conf.json
mim-tauri/capabilities/: default.json
mim-tauri/frontend/: README.md  package-lock.json  package.json
mim-tauri/frontend/src/: app.css  app.html
mim-tauri/frontend/src/lib/: dialog.ts  i18n.ts  undo.ts
mim-tauri/frontend/src/lib/api/: albums.ts  analysis.ts  faces.ts  gemma.ts  photos.ts  sync.ts
mim-tauri/frontend/src/lib/components/: AlbumsView.svelte  AppDialog.svelte  BottomBar.svelte  CalendarView.svelte  ChatView.svelte  ComparisonView.svelte  FaceTimeline.svelte  GlobalDialog.svelte  MapView.svelte  MemoriesView.svelte  PasswordPrompt.svelte  PeopleView.svelte  PhotoDetail.svelte  PhotoGrid.svelte  PhotoSkeleton.svelte  SearchView.svelte  Settings.svelte  Sidebar.svelte  TopBar.svelte  TrashView.svelte
mim-tauri/frontend/src/lib/stores/: photos.ts  ui.ts
mim-tauri/frontend/src/routes/: +layout.svelte  +page.svelte
mim-tauri/icons/: icon.icns
mim-tauri/src/: main.rs  state.rs
mim-tauri/src/commands/: albums.rs  analysis.rs  faces.rs  gemma.rs  import.rs  library.rs  mod.rs  models.rs  secure.rs  settings.rs  sync.rs  upscale.rs  watch.rs
