[workspace]
resolver = "2"
members = ["mim-core", "mim-ml", "mim-tauri"]

[workspace.package]
version = "1.0.8"
edition = "2024"
license = "MIT"
authors = ["Tony"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
