[package]
name = "mim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "blob"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
fast_image_resize = "5"
walkdir = "2"
notify = "8"
kamadak-exif = "0.5"
blake3 = "1"
rayon = "1"
parking_lot = "0.12"
directories = "6"
bytemuck = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1"
tar = "0.4"
